<resources>
    <string name="app_name">VolumeChanger</string>
    <string name="name">Name</string>
    <string name="location">Location</string>
    <string name="range">Range</string>
    <string name="bell_volume">Bell Volume</string>
    <string name="media_volume">Media Volume</string>

    <string name="just_yes">Yes</string>
    <string name="just_No">No</string>

    <string name="delete_location_text">Are you sure you want to\nremove this location?</string>
    <string name="overlap_other_place">It overlaps with other place.</string>

    <string name="add_location">Add Location</string>

    <string name="mute">Mute</string>
    <string name="vibration">Vibration</string>
    <string name="max">Max</string>

    <string name="requires_permissions">Requires permission below</string>
    <string name="location_body">VolumeChanger supports volume control by collecting background location data even when the app is shut down.</string>
    <string name="disturb_place_holder">Do Not Disturb access</string>
    <string name="disturb_body">Use for volume adjustment</string>

    <string name="privacy_policy">Privacy policy</string>
    <string name="terms_of_use">Terms of Use</string>
    <string name="agreements">Accept and proceed with the <font fgcolor='#21D5CB'><u><b>Privacy policy</b></u></font> and <font fgcolor='#21D5CB'><u><b>Terms of Use</b></u></font>.</string>

    <string-array name="range_array">
        <item>100M</item>
        <item>200M</item>
        <item>300M</item>
        <item>500M</item>
        <item>1000M</item>
    </string-array>

    <string name="admob_unit_id_test" translatable="false">ca-app-pub-3940256099942544/6300978111</string>
    <string name="admob_interstitial_id_test" translatable="false">ca-app-pub-3940256099942544/1033173712</string>
    <string name="admob_unit_id" translatable="false">ca-app-pub-6488007692272272/3586774642</string>
    <string name="admob_interstitial_id" translatable="false">ca-app-pub-6488007692272272/2205043626</string>
    <string name="empty_address">address field is empty</string>
    <string name="address_no_matching">No matching addresses found</string>
</resources>